<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue_drawable"
    tools:context=".Activity.LogActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/days_one"
        android:gravity="center_horizontal"
        android:text="@string/testapp"
        android:textColor="#FFFFFF"
        android:textSize="45sp" />

    <EditText
        android:id="@+id/input_email2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="430dp"
        android:autofillHints="Email"
        android:fontFamily="@font/days_one"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:ems="13"
        android:textColor="#FFFFFF"
        android:textColorHint="#999999" />

    <EditText
        android:id="@+id/input_pass2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="500dp"
        android:autofillHints="Password"
        android:fontFamily="@font/days_one"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:ems="13"
        android:textColor="#FFFFFF"
        android:textColorHint="#999999" />

    <Button
        android:id="@+id/signInBtn2"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"

        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="590dp"
        android:fontFamily="@font/days_one"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/signUpBtn2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="660dp"
        android:fontFamily="@font/days_one"
        android:text="@string/Registration"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />


</FrameLayout>